--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,187 @@
+/* GENERAL STYLING */
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+* { margin:0; padding: 0;}
+a {text-decoration: none;}
+img {width: 100%; max-width: 100%; display: block;}
+.visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+/* /END GENERAL STYLING */
+
+html {
+  font-size: 62.7%;
+}
+section {
+  height: 100vh;
+}
 
 .wrapper {
   margin: 0 auto;
   width: 90%;
   max-width: 1280px;
+  border: 1px solid black;
 }
-.main-content {
+.section {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  color: white;
+}
+
+.main-content {
+  display: flex;
+  border: 1px solid yellow;
+}
+aside {
+  width: 30%;
+  border: 1px solid white;
+}
+
+
+/* FORM */
+#form-section {
+  background: 
+    linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
+    url(./assets/jack-anstey-383370-unsplash.jpg);
+  /* background: black; */
+  background-size: cover;
+}
+
+#form-section .wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25vh;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  align-items: center;
 }
+
 label {
   margin-right: 10px;
+  margin-bottom: 5px;
+  color: white;
+}
+
+input[type="text"] {
+  width: 300px;
+  padding: 10px 0;
+  margin: 10px 0;
+  background:transparent;
+  border: transparent;
+  border-bottom: 1px solid white;
+  /* border: 1px solid white; */
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  /* border-radius: 5px; */
+}
+h1 {
+  color: white;
+}
+::placeholder {
+  color: white;
+  text-align: center;
+  font-style: italic;
+}
+
+input[type="submit"] {
+  margin-top: 10px;
+  padding: 10px;
+  width: 150px;
+  height: 50px;
+  font-size: 1.5rem;
+  background: transparent;
+  color: white;
+  transition: .15s ease-out;
+  border: 1px solid white;
+  /* animation: bounce 4s infinite; */
+}
+
+input[type="submit"]:hover {
+  background: white;
+  color: black;
 }
 
 
 #Gryffindor {
-  background: red;
+  background: #740001;
 }
+
+/* Hex 	RGB
+	#740001 	(116,0,1)
+	#ae0001 	(174,0,1)
+	#eeba30 	(238,186,48)
+	#d3a625 	(211,166,37)
+	#000000 	(0,0,0) */
+
+
 
 #Hufflepuff {
-  background: yellow;
+  background: #ecb939;
 }
+
+/* 
+Hex 	RGB
+	#ecb939 	(236,185,57)
+	#f0c75e 	(240,199,94)
+	#726255 	(114,98,85)
+	#372e29 	(55,46,41)
+  #000000 	(0,0,0)
+   */
 
 #Slytherin {
-  background: green;
+  background: #1a472a;
 }
 
+/* Hex 	RGB
+	#1a472a 	(26,71,42)
+	#2a623d 	(42,98,61)
+	#5d5d5d 	(93,93,93)
+	#aaaaaa 	(170,170,170)
+  #000000 	(0,0,0)
+   */
+
+
 #Ravenclaw {
-  background: blue;
+  background: #0e1a40;
 }
+
+/* 
+Hex 	RGB
+	#0e1a40 	(14,26,64)
+	#222f5b 	(34,47,91)
+	#5d5d5d 	(93,93,93)
+	#946b2d 	(148,107,45)
+  #000000 	(0,0,0) */
+  
+
+  img {
+    height: 500px;
+    color: white;
+  }
+
+  ul {
+    border: 1px solid red;
+    width: 50%;
+  }
+
+  li {
+    border-bottom: 1px solid rgba(255,255,255,0.5);
+  }
+
+  .house-list {
+    border: 1px solid orchid;
+    width: 100%;
+  }
