saving list styles

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 a {text-decoration: none;}
 img {width: 100%; max-width: 100%; display: block;}
 .visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+ul {list-style: none;}
 /* /END GENERAL STYLING */
 
 html {
@@ -19,33 +20,42 @@ section {
   margin: 0 auto;
   width: 90%;
   max-width: 1280px;
-  border: 1px solid black;
 }
 .section {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   color: white;
 }
 
-.main-content {
+.content-container {
   display: flex;
-  border: 1px solid yellow;
 }
+
 aside {
   width: 30%;
   border: 1px solid white;
 }
 
+.main-content {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+
+}
+
+.house-list {
+  width: 50%;
+  border: 1px solid orange;
+  height: 50vh;
+}
 
 /* FORM */
 #form-section {
   background: 
     linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
     url(./assets/jack-anstey-383370-unsplash.jpg);
-  /* background: black; */
   background-size: cover;
 }
 
@@ -87,9 +97,11 @@ input[type="text"] {
   font-size: 2rem;
   /* border-radius: 5px; */
 }
+
 h1 {
   color: white;
 }
+
 ::placeholder {
   color: white;
   text-align: center;
@@ -114,6 +126,9 @@ input[type="submit"]:hover {
   color: black;
 }
 
+
+
+/* DASHBOARD */
 
 #Gryffindor {
   background: #740001;
@@ -168,20 +183,20 @@ Hex 	RGB
   
 
   img {
-    height: 500px;
     color: white;
   }
 
   ul {
-    border: 1px solid red;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
+    height: 100%;
   }
 
   li {
     border-bottom: 1px solid rgba(255,255,255,0.5);
+    width: 50%;
   }
 
-  .house-list {
-    border: 1px solid orchid;
-    width: 100%;
-  }
+ 
