--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ html {
 }
 
 section {
+  padding: 50px 0;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -34,21 +35,43 @@ section {
 
 aside {
   width: 30%;
-  border: 1px solid white;
+  padding: 50px 0;
+}
+
+#Gryffindor aside {
+  background: radial-gradient(#740001, #740001, rgb(68, 0, 1), rgba(0,0,0,0.7));
+
 }
 
 .main-content {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  margin-left: 30px;
 
 }
 
 .house-list {
   width: 50%;
-  border: 1px solid white;
   height: 50%;
-  padding: 20 0;
+  padding: 20px;
+}
+
+.house-list:nth-of-type(1),
+.house-list:nth-of-type(2) {
+  border-bottom: 1px solid rgba(238,186,48,0.2);
+
+
+}
+
+.house-list:nth-of-type(2),
+.house-list:nth-of-type(4) {
+  border-left: 1px solid rgba(238,186,48,0.2);
+}
+
+
+path {
+  stroke: gold;
 }
 
 .house-name {
@@ -57,24 +80,25 @@ aside {
   padding: 10px 0;
 }
 
+
 ul {
   width: 100%;
   height: 89%;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
 
 li {
-  border-bottom: 1px solid rgba(255,255,255,0.5);
   width: calc(50% - 10px);
   margin: 5px 0;
   font-size: 1.6rem;
 }
 
-
-
+#gryffindor li {
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+}
 
 
 
@@ -153,12 +177,11 @@ input[type="submit"]:hover {
   color: black;
 }
 
-
-
 /* DASHBOARD */
 
 #Gryffindor {
   background: #740001;
+  /* background-image: linear-gradient(to left bottom, #ae0001, #9f0002, #910003, #820002, #740001); */
 }
 
 /* Hex 	RGB
@@ -167,7 +190,6 @@ input[type="submit"]:hover {
 	#eeba30 	(238,186,48)
 	#d3a625 	(211,166,37)
 	#000000 	(0,0,0) */
-
 
 
 #Hufflepuff {
