--- a/src/styles/partials/_sortResult.scss
+++ b/src/styles/partials/_sortResult.scss
@@ -1,5 +1,7 @@
 .sort-result {
     padding-top: 20vh;
+    height: 100vh;
+    text-align: center;
     p {
         font-family: 'Cutive Mono', monospace;
         font-size: 3rem;
