--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -164,18 +164,22 @@ html {
   font-size: 62.7%; }
 
 body {
-  font-family: 'Mada', sans-serif;
+  font-family: 'Gothic A1', sans-serif;
   font-size: 2rem; }
 
-h1, h2 {
+h1, h2, h3 {
   color: white;
-  font-family: 'Cutive Mono', monospace; }
+  font-family: 'Cutive Mono', monospace;
+  font-family: 'Playfair Display', serif; }
 
 h1 {
   font-size: 6.5rem; }
 
 h2 {
   font-size: 3rem; }
+
+h3 {
+  margin-bottom: 10px; }
 
 /* FORM */
 #form-section {
@@ -235,14 +239,13 @@ input[type="submit"],
   height: 100vh;
   text-align: center; }
   .sort-result p {
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Playfair Display', serif;
     font-size: 3rem; }
   .sort-result .house,
   .sort-result .name {
     display: block; }
   .sort-result .house {
-    font-size: 6.5rem;
-    margin-top: 20px; }
+    font-size: 7rem; }
   .sort-result .name {
     font-size: 5rem;
     margin-bottom: 20px; }
@@ -269,7 +272,8 @@ input[type="submit"],
   background: radial-gradient(#ecb939, #805c04); }
 
 #Slytherin {
-  background: radial-gradient(#1a472a, #0a1d11); }
+  background: radial-gradient(#1a472a, #0a1d11);
+  background: #0a1d11; }
 
 #Gryffindor,
 #Hufflepuff,
@@ -314,20 +318,34 @@ Ravenclaw
 #946b2d 	(148,107,45)
 #000000 	(0,0,0) 
 */
-.dashboard {
-  padding-top: 50px;
-  min-height: 60vh; }
+#Ravenclaw .dashboard,
+#Gryffindor .dashboard,
+#Slytherin .dashboard,
+#Hufflepuff .dashboard {
+  background-repeat: no-repeat;
+  background-position: 25%, -10%;
+  background-size: cover;
+  background-position: 50% 3%; }
 
 .main-dash {
-  border: 5px solid white; }
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .main-dash .house-header {
+    text-align: center; }
   .main-dash .user-info {
-    text-align: center;
-    margin-bottom: 50px; }
+    text-align: center; }
+  .main-dash .user-name {
+    font-size: 5rem;
+    font-family: 'Playfair Display', serif;
+    font-style: italic; }
   .main-dash .dash-details {
     display: flex;
     justify-content: space-between; }
   .main-dash .spell-of-day {
-    text-align: right; }
+    text-align: center; }
   .main-dash .detail-item {
     display: flex; }
   .main-dash .detail-head {
@@ -338,7 +356,10 @@ Ravenclaw
   width: 100%;
   height: 100%;
   padding: 20px;
-  text-align: center; }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .house-name {
   text-align: center;
@@ -346,19 +367,57 @@ Ravenclaw
   text-transform: capitalize; }
 
 ul {
-  width: 25%;
-  max-height: 100vh;
+  width: 100%;
+  max-height: 80vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-items: center;
-  border: 1px solid black; }
+  align-items: center; }
 
 li {
-  margin: 5px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 5px 0;
-  width: 100%; }
+  margin: 10px 0;
+  padding: 4px 0;
+  width: 20%;
+  position: relative; }
+
+li::before,
+li::after {
+  content: "";
+  position: absolute; }
+
+li::before {
+  width: 100px;
+  height: 1px;
+  bottom: -10px;
+  left: 75px;
+  background: rgba(255, 255, 255, 0.1);
+  z-index: 10; }
+
+li::after {
+  bottom: -11px;
+  left: 125px;
+  width: 3px;
+  height: 3px;
+  border-radius: 50px;
+  z-index: 20; }
+
+#Ravenclaw li::after {
+  background: #946b2d; }
+
+#Gryffindor li::after {
+  background: #eeba30; }
+
+#Hufflepuff li::before {
+  background: rgba(114, 98, 85, 0.4); }
+
+#Hufflepuff li::after {
+  background: rgba(55, 46, 41, 0.8); }
+
+#Slytherin li::before {
+  background: rgba(0, 0, 0, 0.4); }
+
+#Slytherin li::after {
+  background: rgba(170, 170, 170, 0.5); }
 
 img {
   color: white;
