--- a/src/styles/partials/_dashboard.scss
+++ b/src/styles/partials/_dashboard.scss
@@ -26,6 +26,7 @@
 
 #Slytherin {
   background: radial-gradient(#1a472a, #0a1d11);
+  background: #0a1d11;
 }
 
 #Gryffindor,
@@ -74,16 +75,6 @@ Ravenclaw
 #000000 	(0,0,0) 
 */
 
-
-// .master-house-lists {
-//   display: flex;
-//   flex-wrap: wrap;
-//   width: 100%;
-//   height: 100%;
-//     border: 1px solid yellow;
-
-// }
-
 // .user-house-dash::before {
 //   position: absolute; 
 //   width: 200px;
@@ -92,43 +83,72 @@ Ravenclaw
 //   left: 43%;
 // }
 
-// #Gryffindor .user-house-dash::before {
-//   content: url(../assets/Gryffindor-white.svg);
-// }
-// #Slytherin .user-house-dash::before {
-//   content: url(../assets/Slytherin-white.svg);
-// }
-// #Hufflepuff .user-house-dash::before {
-//   content: url(../assets/Hufflepuff-white.svg);
-// }
-// #Ravenclaw .user-house-dash::before {
-//   content: url(../assets/Ravenclaw-white.svg);
+
+// #Ravenclaw .dashboard {
+//     background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(../assets/Ravenclaw-black.svg);      
 // }
 
+// #Gryffindor .dashboard {
+//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(../assets/Gryffindor-black.svg);
+// }
+
+// #Slytherin .dashboard {
+//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../assets/Slytherin-black.svg);     
+// }
+
+
+// #Hufflepuff .dashboard {
+//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(../assets/Hufflepuff-black.svg);
+// }
+
+#Ravenclaw .dashboard,
+#Gryffindor .dashboard,
+#Slytherin .dashboard,
+#Hufflepuff .dashboard {
+    background-repeat: no-repeat;
+    background-position: 25%, -10%;
+    background-size: cover;
+    background-position: 50% 3%;
+}
 
 .dashboard {
-    padding-top: 50px;
-    min-height: 60vh;
+    // padding-top: 50px;
+
 }
 
 .main-dash {
-    border: 5px solid white;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .house-header {
+    text-align: center;
+
+    }
     .user-info {
         // border: 1px solid limegreen;
         text-align: center;
-        margin-bottom: 50px;
+    }
+    .user-name {
+        font-size: 5rem;
+        font-family: 'Playfair Display', serif;
+        font-style: italic;
+
     }
     .dash-details {
         // border: 3px solid black;
         display: flex;
         justify-content: space-between;
+
     }
     .spell-of-day {
         // border: 1px solid orchid;
-        text-align: right;
+        text-align: center;
     }
     .house-details {
         // border: 1px solid orange;
+
     }
     .detail-item {
         display: flex;
@@ -146,6 +166,9 @@ Ravenclaw
   height: 100%;
   padding: 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .house-name {
@@ -155,21 +178,71 @@ Ravenclaw
 }
 
 ul {
-  width: 25%;
-  max-height: 100vh;
+  width: 100%;
+  max-height: 80vh;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  border: 1px solid black;
 
 }
 
 li {
-  margin: 5px 0;
-  border-bottom: 1px solid rgba(255,255,255,0.3);
-  padding: 5px 0;
-  width: 100%;
+  margin: 10px 0;
+//   border-bottom: 1px solid rgba(255,255,255,0.3);
+  padding: 4px 0;
+  width: 20%;
+  position: relative;
+}
+
+
+li::before, 
+li::after {
+    content: "";
+    position: absolute;
+}
+
+
+li::before{
+    width: 100px;
+    height: 1px;
+    bottom: -10px;
+    left: 75px;
+    background: rgba(255,255,255,0.1);
+    z-index: 10;
+}
+
+li::after{
+    bottom: -11px;
+    left: 125px;
+    width: 3px;
+    height: 3px;
+    border-radius: 50px;
+    z-index: 20;
+}
+
+#Ravenclaw li::after{
+    background: rgb(148,107,45);
+}
+
+#Gryffindor li::after {
+    background: rgb(238,186,48);
+}
+
+#Hufflepuff li::before {
+    background: rgba(114,98,85, 0.4);
+}
+
+#Hufflepuff li::after {
+    background: rgba(55,46,41, 0.8);
+}
+
+#Slytherin li::before {
+    background: rgba(0,0,0,0.4);
+}
+
+#Slytherin li::after {
+    background: rgba(170,170,170,0.5);
 }
 
 img {
