--- a/src/styles/partials/_sortResult.scss
+++ b/src/styles/partials/_sortResult.scss
@@ -3,7 +3,8 @@
     height: 100vh;
     text-align: center;
     p {
-        font-family: 'Cutive Mono', monospace;
+        // font-family: 'Cutive Mono', monospace;
+        font-family: 'Playfair Display', serif;
         font-size: 3rem;
     }
     .house, 
@@ -11,8 +12,9 @@
         display: block;
     }
     .house {
-        font-size: 6.5rem;
-        margin-top: 20px;
+        font-size: 7rem;
+        // margin-top: 10px;
+        // font-style: italic;
     }
     .name {
         font-size: 5rem;
