--- a/src/styles/partials/_dashboard.scss
+++ b/src/styles/partials/_dashboard.scss
@@ -21,7 +21,7 @@
 }
 
 #Hufflepuff {
-  background: radial-gradient(#ecb939, #805c04);
+  background: radial-gradient(#dba826, #5a4204);
 }
 
 #Slytherin {
@@ -45,209 +45,77 @@
   max-width: 1280px;
 }
 
- /* 
-Gryffindor
-#740001 	(116,0,1)
-#ae0001 	(174,0,1)
-#eeba30 	(238,186,48)
-#d3a625 	(211,166,37)
-#000000 	(0,0,0) 
-
-Hufflepuff
-#ecb939 	(236,185,57)
-#f0c75e 	(240,199,94)
-#726255 	(114,98,85)
-#372e29 	(55,46,41)
-#000000 	(0,0,0)
-
-Slytherin
-#1a472a 	(26,71,42)
-#2a623d 	(42,98,61)
-#5d5d5d 	(93,93,93)
-#aaaaaa 	(170,170,170)
-#000000 	(0,0,0)
-
-Ravenclaw
-#0e1a40 	(14,26,64)
-#222f5b 	(34,47,91)
-#5d5d5d 	(93,93,93)
-#946b2d 	(148,107,45)
-#000000 	(0,0,0) 
-*/
-
-// .user-house-dash::before {
-//   position: absolute; 
-//   width: 200px;
-//   height: 200px;
-//   top: 120px;
-//   left: 43%;
-// }
-
-
-// #Ravenclaw .dashboard {
-//     background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(../assets/Ravenclaw-black.svg);      
-// }
-
-// #Gryffindor .dashboard {
-//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(../assets/Gryffindor-black.svg);
-// }
-
-// #Slytherin .dashboard {
-//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../assets/Slytherin-black.svg);     
-// }
-
-
-// #Hufflepuff .dashboard {
-//     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(../assets/Hufflepuff-black.svg);
-// }
-
-#Ravenclaw .dashboard,
-#Gryffindor .dashboard,
-#Slytherin .dashboard,
-#Hufflepuff .dashboard {
-    background-repeat: no-repeat;
-    background-position: 25%, -10%;
-    background-size: cover;
-    background-position: 50% 3%;
-}
-
 .dashboard {
     // padding-top: 50px;
-
 }
 
 .main-dash {
+    position: relative;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     .house-header {
-    text-align: center;
-
+        text-align: center;
     }
     .user-info {
-        // border: 1px solid limegreen;
         text-align: center;
     }
     .user-name {
         font-size: 5rem;
         font-family: 'Playfair Display', serif;
         font-style: italic;
-
+        margin-bottom: 20px;
     }
     .dash-details {
-        // border: 3px solid black;
         display: flex;
         justify-content: space-between;
-
     }
-    .spell-of-day {
-        // border: 1px solid orchid;
+    .spells {
+        margin-top: 50px;
         text-align: center;
+        padding-top: 75px;
+        height: 310px;
+        width: 310px;
+        border-radius: 50%;
+        .spell {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .spell-effect {
+            text-transform: capitalize;
+        }
     }
-    .house-details {
-        // border: 1px solid orange;
+}
 
-    }
+.house-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;  
+    padding: 50px 0; 
+    border-top:1px solid rgba(255,255,255,0.5);
+    border-bottom:1px solid rgba(255,255,255,0.5);    
+    width: 100%;
+}
+.details-container {
+    display: flex;
+    justify-content: center;
     .detail-item {
-        display: flex;
-        // border: 1px solid yellow;
+        margin: 0 30px;
+        padding: 10px 20px;
     }
     .detail-head {
-        font-weight: bold;
-        margin-right: 10px;
+        font-family: 'Playfair Display', serif;
+        font-style: italic;
+        margin-bottom: 10px;
+
     }
 }
-
-
-.house-list {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.house-name {
-  text-align: center;
-  padding: 40px 0;
-  text-transform: capitalize;
-}
-
-ul {
-  width: 100%;
-  max-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-
-}
-
-li {
-  margin: 10px 0;
-//   border-bottom: 1px solid rgba(255,255,255,0.3);
-  padding: 4px 0;
-  width: 20%;
-  position: relative;
-}
-
 
 li::before, 
 li::after {
     content: "";
     position: absolute;
 }
-
-
-li::before{
-    width: 100px;
-    height: 1px;
-    bottom: -10px;
-    left: 75px;
-    background: rgba(255,255,255,0.1);
-    z-index: 10;
-}
-
-li::after{
-    bottom: -11px;
-    left: 125px;
-    width: 3px;
-    height: 3px;
-    border-radius: 50px;
-    z-index: 20;
-}
-
-#Ravenclaw li::after{
-    background: rgb(148,107,45);
-}
-
-#Gryffindor li::after {
-    background: rgb(238,186,48);
-}
-
-#Hufflepuff li::before {
-    background: rgba(114,98,85, 0.4);
-}
-
-#Hufflepuff li::after {
-    background: rgba(55,46,41, 0.8);
-}
-
-#Slytherin li::before {
-    background: rgba(0,0,0,0.4);
-}
-
-#Slytherin li::after {
-    background: rgba(170,170,170,0.5);
-}
-
-img {
-  color: white;
-  height: 100px;
-  width: 100px;
-}
- 
