--- a/src/styles/partials/_sortResult.scss
+++ b/src/styles/partials/_sortResult.scss
@@ -13,7 +13,7 @@
     }
     .house {
         font-size: 7rem;
-        // margin-top: 10px;
+        margin-top: 10px;
         // font-style: italic;
     }
     .name {
