--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -18,9 +18,11 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
+  margin-bottom: 25px;
 }
 
 h3 {
+  font-size: 3rem;
   margin-bottom: 10px;
 }
