--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -241,6 +241,10 @@ input[type="submit"],
     background: white;
     color: black; }
 
+#sort-page {
+  background: black;
+  color: white; }
+
 .sort-result {
   padding-top: 20vh;
   height: 100vh;
@@ -252,11 +256,79 @@ input[type="submit"],
   .sort-result .name {
     display: block; }
   .sort-result .house {
-    font-size: 7rem;
+    font-size: 8rem;
     margin-top: 10px; }
   .sort-result .name {
     font-size: 5rem;
     margin-bottom: 20px; }
+
+.hide {
+  visibility: hidden; }
+
+.anim1 {
+  animation: zoomIn 1s; }
+
+.anim2 {
+  animation: zoomIn 1s; }
+
+.anim3 {
+  animation: jackInTheBox 1.25s; }
+
+.anim4 {
+  animation: slideInUp 1s; }
+
+.zoomIn {
+  animation-name: zoomIn; }
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+    color: transparent; }
+  50% {
+    opacity: 1; }
+  100% {
+    opacity: 1;
+    color: white; } }
+
+.slideInUp {
+  animation-name: slideInUp; }
+
+.jackInTheBox {
+  animation-name: jackInTheBox; }
+
+.rotateIn {
+  animation-name: rotateIn; }
+
+@keyframes slideInUp {
+  from {
+    transform: translate3d(0, 100%, 0);
+    visibility: visible; }
+  to {
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes rotateIn {
+  from {
+    transform-origin: center;
+    transform: rotate3d(0, 0, 1, -200deg);
+    opacity: 0; }
+  to {
+    transform-origin: center;
+    transform: translate3d(0, 0, 0);
+    opacity: 1; } }
+
+@keyframes jackInTheBox {
+  from {
+    opacity: 0;
+    transform: scale(0.1) rotate(30deg);
+    transform-origin: center bottom; }
+  50% {
+    transform: rotate(-10deg); }
+  70% {
+    transform: rotate(3deg); }
+  to {
+    opacity: 1;
+    transform: scale(1); } }
 
 /* #Gryffindor .user-house-dash {
   background: radial-gradient(#740001, #330001);
