--- a/src/styles/partials/_dashboard.scss
+++ b/src/styles/partials/_dashboard.scss
@@ -1,32 +1,30 @@
 
-/* #Gryffindor .user-house-dash {
-  background: radial-gradient(#740001, #330001);
-}
-#Slytherin .user-house-dash {
-  background: radial-gradient(#1a472a, #0a1d11);
-}
-#Ravenclaw .user-house-dash {
-  background: radial-gradient(#0e1a40, #070c1f);
-}
-#Hufflepuff .user-house-dash {
-  background: radial-gradient(#ecb939, #805c04);
-} */
-
 #Gryffindor {
-  background: radial-gradient(#740001, #330001);
+//   background: radial-gradient(#740001, #330001),
+//   url(../assets/Gryffindor.svg);
+  background: radial-gradient(rgba(116,0,1,0.9), rgba(116,0,1,0.9)),
+  url(../assets/Gryffindor.svg);
 }
 
 #Ravenclaw {
-  background: radial-gradient(#0e1a40, #070c1f);
+//   background: radial-gradient(#0e1a40, #070c1f),
+//   url(../assets/Ravenclaw.svg);
+   background: radial-gradient(rgba(14,26,64,0.9), rgba(14,26,64,0.9)),
+  url(../assets/Ravenclaw.svg);
 }
 
 #Hufflepuff {
-  background: radial-gradient(#dba826, #5a4204);
+//   background: radial-gradient(#dba826, #5a4204),
+//   url(../assets/Hufflepuff.svg);
+  background: radial-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
+  url(../assets/Hufflepuff.svg);
 }
 
 #Slytherin {
-  background: radial-gradient(#1a472a, #0a1d11);
-  background: #0a1d11;
+  background: radial-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+  url(../assets/Slytherin.svg);
+//   background: radial-gradient(#1a472a, #0a1d11),
+//   url(../assets/Slytherin-white.svg);
 }
 
 #Gryffindor,
@@ -35,7 +33,6 @@
 #Slytherin {
   display: flex;
   flex-direction: column;
-  color: white;
   min-height: 100vh;
 }
 
@@ -59,9 +56,6 @@
         text-align: center;
     }
     .user-name {
-        font-size: 5rem;
-        font-family: 'Playfair Display', serif;
-        font-style: italic;
         margin-bottom: 20px;
     }
     .dash-details {
@@ -76,7 +70,6 @@
         width: 310px;
         border-radius: 50%;
         .spell {
-            font-weight: bold;
             margin-bottom: 10px;
         }
         .spell-effect {
@@ -103,8 +96,6 @@
         padding: 10px 20px;
     }
     .detail-head {
-        font-family: 'Playfair Display', serif;
-        font-style: italic;
         margin-bottom: 10px;
 
     }
