--- a/src/styles/partials/_dashboard.scss
+++ b/src/styles/partials/_dashboard.scss
@@ -1,30 +1,21 @@
-
 #Gryffindor {
-//   background: radial-gradient(#740001, #330001),
-//   url(../assets/Gryffindor.svg);
   background: radial-gradient(rgba(116,0,1,0.9), rgba(116,0,1,0.9)),
   url(../assets/Gryffindor.svg);
 }
 
 #Ravenclaw {
-//   background: radial-gradient(#0e1a40, #070c1f),
-//   url(../assets/Ravenclaw.svg);
    background: radial-gradient(rgba(14,26,64,0.9), rgba(14,26,64,0.9)),
   url(../assets/Ravenclaw.svg);
 }
 
 #Hufflepuff {
-//   background: radial-gradient(#dba826, #5a4204),
-//   url(../assets/Hufflepuff.svg);
-  background: radial-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
+  background: radial-gradient(rgba(236,185,57,0.9), rgba(236,185,57,0.9)),
   url(../assets/Hufflepuff.svg);
 }
 
 #Slytherin {
-  background: radial-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
+  background: radial-gradient(rgba(26,71,42,0.9), rgba(26,71,42,0.9)),
   url(../assets/Slytherin.svg);
-//   background: radial-gradient(#1a472a, #0a1d11),
-//   url(../assets/Slytherin-white.svg);
 }
 
 #Gryffindor,
@@ -34,6 +25,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-repeat: no-repeat;
 }
 
 .wrapper {
@@ -88,6 +80,7 @@
     border-bottom:1px solid rgba(255,255,255,0.5);    
     width: 100%;
 }
+
 .details-container {
     display: flex;
     justify-content: center;
@@ -105,4 +98,10 @@ li::before,
 li::after {
     content: "";
     position: absolute;
+}
+
+@media (max-width: 940px) {
+    .details-container {
+        flex-direction: column;
+    }
 }
